--- a/КиноОнлайн/prepros.cfg
+++ b/КиноОнлайн/prepros.cfg
@@ -139,6 +139,100 @@
           "imported": false,
           "parents": [],
           "type": "html"
+        },
+        "3c1621d1": {
+          "id": "3c1621d1",
+          "path": "dev/js/script.js",
+          "output": "build/script.js",
+          "name": "script.js",
+          "category": "JS",
+          "autoCompile": true,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": true,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "0452c67d": {
+          "id": "0452c67d",
+          "path": "build/script.js",
+          "output": "build/script-dist.js",
+          "name": "script.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "e40f1bea": {
+          "id": "e40f1bea",
+          "path": "dev/sass/index/slider.sass",
+          "output": "dev/css/index/slider.css",
+          "name": "slider.sass",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "c926a60c"
+          ],
+          "type": "sass"
+        },
+        "3607b749": {
+          "id": "3607b749",
+          "path": "dev/css/index/slider.css",
+          "output": "dev/css/index/slider-dist.css",
+          "name": "slider.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "f5d46d37": {
+          "id": "f5d46d37",
+          "path": "dev/jade/index/slider.jade",
+          "output": "dev/html/index/slider.html",
+          "name": "slider.jade",
+          "category": "HTML",
+          "autoCompile": false,
+          "pretty": true,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "a11c4966"
+          ],
+          "type": "jade"
+        },
+        "195b223f": {
+          "id": "195b223f",
+          "path": "dev/html/index/slider.html",
+          "output": "dev/html/index/slider.html",
+          "name": "slider.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
         }
       },
       "deploymentHistory": {},
@@ -335,7 +429,14 @@
               "comments": false,
               "preserve_line": false,
               "screw_ie8": false,
-              "preamble": null
+              "preamble": null,
+              "indent_start": 0,
+              "indent_level": 4,
+              "width": 80,
+              "max_line_len": 32000,
+              "source_map": null,
+              "shebang": true,
+              "quote_style": 0
             }
           }
         }
