--- a/КиноОнлайн/prepros.cfg
+++ b/КиноОнлайн/prepros.cfg
@@ -233,6 +233,52 @@
           "imported": false,
           "parents": [],
           "type": "html"
+        },
+        "a57a3b45": {
+          "id": "a57a3b45",
+          "path": "dev/sass/index/popular.sass",
+          "output": "dev/css/index/popular.css",
+          "name": "popular.sass",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "c926a60c"
+          ],
+          "type": "sass"
+        },
+        "be25024c": {
+          "id": "be25024c",
+          "path": "dev/jade/index/popular.jade",
+          "output": "dev/html/index/popular.html",
+          "name": "popular.jade",
+          "category": "HTML",
+          "autoCompile": false,
+          "pretty": true,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "a11c4966"
+          ],
+          "type": "jade"
+        },
+        "9907ab37": {
+          "id": "9907ab37",
+          "path": "dev/html/index/popular.html",
+          "output": "dev/html/index/popular.html",
+          "name": "popular.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
         }
       },
       "deploymentHistory": {},
