--- a/КиноОнлайн/prepros.cfg
+++ b/КиноОнлайн/prepros.cfg
@@ -279,6 +279,158 @@
           "imported": false,
           "parents": [],
           "type": "html"
+        },
+        "7d0b4436": {
+          "id": "7d0b4436",
+          "path": "dev/sass/index/new.sass",
+          "output": "dev/css/index/new.css",
+          "name": "new.sass",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "c926a60c"
+          ],
+          "type": "sass"
+        },
+        "5f986822": {
+          "id": "5f986822",
+          "path": "dev/jade/index/new.jade",
+          "output": "dev/html/index/new.html",
+          "name": "new.jade",
+          "category": "HTML",
+          "autoCompile": false,
+          "pretty": true,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "a11c4966"
+          ],
+          "type": "jade"
+        },
+        "7d1634fa": {
+          "id": "7d1634fa",
+          "path": "dev/html/index/new.html",
+          "output": "dev/html/index/new.html",
+          "name": "new.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "e3e5a6c1": {
+          "id": "e3e5a6c1",
+          "path": "dev/sass/index/recommended.sass",
+          "output": "dev/css/index/recommended.css",
+          "name": "recommended.sass",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "c926a60c"
+          ],
+          "type": "sass"
+        },
+        "405bfd10": {
+          "id": "405bfd10",
+          "path": "dev/jade/index/recommended.jade",
+          "output": "dev/html/index/recommended.html",
+          "name": "recommended.jade",
+          "category": "HTML",
+          "autoCompile": true,
+          "pretty": true,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "jade"
+        },
+        "0d4b26a1": {
+          "id": "0d4b26a1",
+          "path": "dev/html/index/recommended.html",
+          "output": "dev/html/index/recommended.html",
+          "name": "recommended.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "da07b69f": {
+          "id": "da07b69f",
+          "path": "dev/sass/global/footer.sass",
+          "output": "dev/css/global/footer.css",
+          "name": "footer.sass",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "c926a60c"
+          ],
+          "type": "sass"
+        },
+        "05b3c0c4": {
+          "id": "05b3c0c4",
+          "path": "dev/css/global/footer.css",
+          "output": "dev/css/global/footer-dist.css",
+          "name": "footer.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "50bd0848": {
+          "id": "50bd0848",
+          "path": "dev/jade/global/footer.jade",
+          "output": "dev/html/global/footer.html",
+          "name": "footer.jade",
+          "category": "HTML",
+          "autoCompile": false,
+          "pretty": true,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "a11c4966"
+          ],
+          "type": "jade"
+        },
+        "47960e31": {
+          "id": "47960e31",
+          "path": "dev/html/global/footer.html",
+          "output": "dev/html/global/footer.html",
+          "name": "footer.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
         }
       },
       "deploymentHistory": {},
