--- a/КиноОнлайн/prepros.cfg
+++ b/КиноОнлайн/prepros.cfg
@@ -94,7 +94,8 @@
           "customOutput": false,
           "imported": true,
           "parents": [
-            "c926a60c"
+            "c926a60c",
+            "717bccb9"
           ],
           "type": "sass"
         },
@@ -125,7 +126,8 @@
           "customOutput": false,
           "imported": true,
           "parents": [
-            "a11c4966"
+            "a11c4966",
+            "d9284651"
           ],
           "type": "jade"
         },
@@ -188,7 +190,8 @@
           "customOutput": false,
           "imported": true,
           "parents": [
-            "c926a60c"
+            "c926a60c",
+            "717bccb9"
           ],
           "type": "sass"
         },
@@ -352,11 +355,13 @@
           "output": "dev/html/index/recommended.html",
           "name": "recommended.jade",
           "category": "HTML",
-          "autoCompile": true,
+          "autoCompile": false,
           "pretty": true,
           "customOutput": false,
-          "imported": false,
-          "parents": [],
+          "imported": true,
+          "parents": [
+            "a11c4966"
+          ],
           "type": "jade"
         },
         "0d4b26a1": {
@@ -386,7 +391,8 @@
           "customOutput": false,
           "imported": true,
           "parents": [
-            "c926a60c"
+            "c926a60c",
+            "717bccb9"
           ],
           "type": "sass"
         },
@@ -417,7 +423,8 @@
           "customOutput": false,
           "imported": true,
           "parents": [
-            "a11c4966"
+            "a11c4966",
+            "d9284651"
           ],
           "type": "jade"
         },
@@ -431,6 +438,213 @@
           "imported": false,
           "parents": [],
           "type": "html"
+        },
+        "d9284651": {
+          "id": "d9284651",
+          "path": "dev/jade/video.jade",
+          "output": "build/video.html",
+          "name": "video.jade",
+          "category": "HTML",
+          "autoCompile": true,
+          "pretty": true,
+          "customOutput": true,
+          "imported": false,
+          "parents": [],
+          "type": "jade"
+        },
+        "c0a88d73": {
+          "id": "c0a88d73",
+          "path": "dev/html/video.html",
+          "output": "dev/html/video.html",
+          "name": "video.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "0c49a872": {
+          "id": "0c49a872",
+          "path": "build/video.html",
+          "output": "build/video.html",
+          "name": "video.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "717bccb9": {
+          "id": "717bccb9",
+          "path": "dev/sass/video.sass",
+          "output": "build/css/video.css",
+          "name": "video.sass",
+          "category": "CSS",
+          "autoCompile": true,
+          "autoprefixer": true,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": true,
+          "imported": false,
+          "parents": [],
+          "type": "sass"
+        },
+        "780433b2": {
+          "id": "780433b2",
+          "path": "build/css/video.css",
+          "output": "build/css/video-dist.css",
+          "name": "video.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "93a2226b": {
+          "id": "93a2226b",
+          "path": "dev/jade/video/like.jade",
+          "output": "dev/html/video/like.html",
+          "name": "like.jade",
+          "category": "HTML",
+          "autoCompile": false,
+          "pretty": true,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "d9284651"
+          ],
+          "type": "jade"
+        },
+        "cd8c0e26": {
+          "id": "cd8c0e26",
+          "path": "dev/html/video/like.html",
+          "output": "dev/html/video/like.html",
+          "name": "like.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "8f4abbaf": {
+          "id": "8f4abbaf",
+          "path": "dev/sass/video/like.sass",
+          "output": "dev/css/video/like.css",
+          "name": "like.sass",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "717bccb9"
+          ],
+          "type": "sass"
+        },
+        "b6b48e2c": {
+          "id": "b6b48e2c",
+          "path": "dev/sass/video/last.sass",
+          "output": "dev/css/video/last.css",
+          "name": "last.sass",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "717bccb9"
+          ],
+          "type": "sass"
+        },
+        "cd6cc7ab": {
+          "id": "cd6cc7ab",
+          "path": "dev/jade/video/last.jade",
+          "output": "dev/html/video/last.html",
+          "name": "last.jade",
+          "category": "HTML",
+          "autoCompile": false,
+          "pretty": true,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "d9284651"
+          ],
+          "type": "jade"
+        },
+        "fee060d0": {
+          "id": "fee060d0",
+          "path": "dev/html/video/last.html",
+          "output": "dev/html/video/last.html",
+          "name": "last.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "6a3b4895": {
+          "id": "6a3b4895",
+          "path": "dev/jade/video/recommendedToYou.jade",
+          "output": "dev/html/video/recommendedToYou.html",
+          "name": "recommendedToYou.jade",
+          "category": "HTML",
+          "autoCompile": false,
+          "pretty": true,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "d9284651"
+          ],
+          "type": "jade"
+        },
+        "4a7cb542": {
+          "id": "4a7cb542",
+          "path": "dev/html/video/recommendedToYou.html",
+          "output": "dev/html/video/recommendedToYou.html",
+          "name": "recommendedToYou.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "380ffd83": {
+          "id": "380ffd83",
+          "path": "dev/sass/video/recommendedToYou.sass",
+          "output": "dev/css/video/recommendedToYou.css",
+          "name": "recommendedToYou.sass",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "717bccb9"
+          ],
+          "type": "sass"
         }
       },
       "deploymentHistory": {},
