--- a/КиноОнлайн/prepros.cfg
+++ b/КиноОнлайн/prepros.cfg
@@ -253,41 +253,6 @@
           "parents": [],
           "type": "html"
         },
-        "a57a3b45": {
-          "id": "a57a3b45",
-          "path": "dev/sass/index/popular.sass",
-          "output": "dev/css/index/popular.css",
-          "name": "popular.sass",
-          "category": "CSS",
-          "autoCompile": false,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "c926a60c"
-          ],
-          "type": "sass"
-        },
-        "be25024c": {
-          "id": "be25024c",
-          "path": "dev/jade/index/popular.jade",
-          "output": "dev/html/index/popular.html",
-          "name": "popular.jade",
-          "category": "HTML",
-          "autoCompile": false,
-          "pretty": true,
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "a11c4966"
-          ],
-          "type": "jade"
-        },
         "9907ab37": {
           "id": "9907ab37",
           "path": "dev/html/index/popular.html",
@@ -298,26 +263,6 @@
           "imported": false,
           "parents": [],
           "type": "html"
-        },
-        "7d0b4436": {
-          "id": "7d0b4436",
-          "path": "dev/sass/index/new.sass",
-          "output": "dev/css/index/new.css",
-          "name": "new.sass",
-          "category": "CSS",
-          "autoCompile": false,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "c926a60c"
-          ],
-          "type": "sass"
         },
         "5f986822": {
           "id": "5f986822",
@@ -344,41 +289,6 @@
           "imported": false,
           "parents": [],
           "type": "html"
-        },
-        "e3e5a6c1": {
-          "id": "e3e5a6c1",
-          "path": "dev/sass/index/recommended.sass",
-          "output": "dev/css/index/recommended.css",
-          "name": "recommended.sass",
-          "category": "CSS",
-          "autoCompile": false,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "c926a60c"
-          ],
-          "type": "sass"
-        },
-        "405bfd10": {
-          "id": "405bfd10",
-          "path": "dev/jade/index/recommended.jade",
-          "output": "dev/html/index/recommended.html",
-          "name": "recommended.jade",
-          "category": "HTML",
-          "autoCompile": false,
-          "pretty": true,
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "a11c4966"
-          ],
-          "type": "jade"
         },
         "0d4b26a1": {
           "id": "0d4b26a1",
@@ -658,7 +568,8 @@
           "customOutput": false,
           "imported": true,
           "parents": [
-            "717bccb9"
+            "717bccb9",
+            "c926a60c"
           ],
           "type": "sass"
         },
@@ -803,6 +714,70 @@
           "imported": false,
           "parents": [],
           "type": "html"
+        },
+        "0adae7c2": {
+          "id": "0adae7c2",
+          "path": "dev/jade/global/sixBlock.jade",
+          "output": "dev/html/global/sixBlock.html",
+          "name": "sixBlock.jade",
+          "category": "HTML",
+          "autoCompile": false,
+          "pretty": true,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "a11c4966"
+          ],
+          "type": "jade"
+        },
+        "915796d6": {
+          "id": "915796d6",
+          "path": "dev/html/global/sixBlock.html",
+          "output": "dev/html/global/sixBlock.html",
+          "name": "sixBlock.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "7d0b4436": {
+          "id": "7d0b4436",
+          "path": "dev/sass/index/new.sass",
+          "output": "dev/css/index/new.css",
+          "name": "new.sass",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "c926a60c"
+          ],
+          "type": "sass"
+        },
+        "32f55804": {
+          "id": "32f55804",
+          "path": "dev/sass/global/sixBlock.sass",
+          "output": "dev/css/global/sixBlock.css",
+          "name": "sixBlock.sass",
+          "category": "CSS",
+          "autoCompile": true,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "sass"
         }
       },
       "deploymentHistory": {},
