--- a/КиноОнлайн/prepros.cfg
+++ b/КиноОнлайн/prepros.cfg
@@ -9,22 +9,6 @@
       "name": "КиноОнлайн",
       "path": "",
       "files": {
-        "43545033": {
-          "id": "43545033",
-          "path": "dev/css/global/global.css",
-          "output": "dev/css/global/global-dist.css",
-          "name": "global.css",
-          "category": "CSS",
-          "autoCompile": false,
-          "sourceMaps": false,
-          "compress": true,
-          "cssnext": false,
-          "autoprefixer": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "css"
-        },
         "eb0c839c": {
           "id": "eb0c839c",
           "path": "build/index.html",
@@ -573,50 +557,13 @@
           ],
           "type": "sass"
         },
-        "912466c3": {
-          "id": "912466c3",
-          "path": "dev/css/global/mixin.css",
-          "output": "dev/css/global/mixin-dist.css",
-          "name": "mixin.css",
-          "category": "CSS",
-          "autoCompile": false,
-          "sourceMaps": false,
-          "compress": true,
-          "cssnext": false,
-          "autoprefixer": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "css"
-        },
-        "bb4f843d": {
-          "id": "bb4f843d",
-          "path": "dev/sass/global/mixinAndVar.sass",
-          "output": "dev/css/global/mixinAndVar.css",
-          "name": "mixinAndVar.sass",
-          "category": "CSS",
-          "autoCompile": false,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "717bccb9",
-            "c926a60c"
-          ],
-          "type": "sass"
-        },
         "7b24e0ba": {
           "id": "7b24e0ba",
           "path": "dev/sass/global/global.sass",
           "output": "dev/css/global/global.css",
           "name": "global.sass",
           "category": "CSS",
-          "autoCompile": false,
+          "autoCompile": true,
           "autoprefixer": false,
           "sourceMaps": false,
           "libSass": true,
@@ -624,96 +571,9 @@
           "fullCompass": false,
           "outputStyle": "expanded",
           "customOutput": false,
-          "imported": true,
-          "parents": [
-            "717bccb9",
-            "c926a60c"
-          ],
+          "imported": false,
+          "parents": [],
           "type": "sass"
-        },
-        "e5658e19": {
-          "id": "e5658e19",
-          "path": "dev/sass/video/video.sass",
-          "output": "dev/css/video/video.css",
-          "name": "video.sass",
-          "category": "CSS",
-          "autoCompile": false,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "717bccb9"
-          ],
-          "type": "sass"
-        },
-        "e5ac2aa7": {
-          "id": "e5ac2aa7",
-          "path": "dev/jade/video/video.jade",
-          "output": "dev/html/video/video.html",
-          "name": "video.jade",
-          "category": "HTML",
-          "autoCompile": false,
-          "pretty": true,
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "d9284651"
-          ],
-          "type": "jade"
-        },
-        "1dea6e87": {
-          "id": "1dea6e87",
-          "path": "dev/html/video/video.html",
-          "output": "dev/html/video/video.html",
-          "name": "video.html",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "html"
-        },
-        "48e12138": {
-          "id": "48e12138",
-          "path": "dev/html/global/head.html",
-          "output": "dev/html/global/head.html",
-          "name": "head.html",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "html"
-        },
-        "ddfb11d0": {
-          "id": "ddfb11d0",
-          "path": "dev/jade/global/scriptAndLink.jade",
-          "output": "dev/html/global/scriptAndLink.html",
-          "name": "scriptAndLink.jade",
-          "category": "HTML",
-          "autoCompile": false,
-          "pretty": true,
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "d9284651",
-            "a11c4966"
-          ],
-          "type": "jade"
-        },
-        "2ca96b74": {
-          "id": "2ca96b74",
-          "path": "dev/html/global/scriptAndLink.html",
-          "output": "dev/html/global/scriptAndLink.html",
-          "name": "scriptAndLink.html",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "html"
         },
         "0adae7c2": {
           "id": "0adae7c2",
