--- a/КиноОнлайн/prepros.cfg
+++ b/КиноОнлайн/prepros.cfg
@@ -552,8 +552,7 @@
           "customOutput": false,
           "imported": true,
           "parents": [
-            "717bccb9",
-            "c926a60c"
+            "717bccb9"
           ],
           "type": "sass"
         },
@@ -563,7 +562,7 @@
           "output": "dev/css/global/global.css",
           "name": "global.sass",
           "category": "CSS",
-          "autoCompile": true,
+          "autoCompile": false,
           "autoprefixer": false,
           "sourceMaps": false,
           "libSass": true,
@@ -571,8 +570,10 @@
           "fullCompass": false,
           "outputStyle": "expanded",
           "customOutput": false,
-          "imported": false,
-          "parents": [],
+          "imported": true,
+          "parents": [
+            "c926a60c"
+          ],
           "type": "sass"
         },
         "0adae7c2": {
@@ -619,24 +620,6 @@
           "parents": [
             "c926a60c"
           ],
-          "type": "sass"
-        },
-        "32f55804": {
-          "id": "32f55804",
-          "path": "dev/sass/global/sixBlock.sass",
-          "output": "dev/css/global/sixBlock.css",
-          "name": "sixBlock.sass",
-          "category": "CSS",
-          "autoCompile": true,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
           "type": "sass"
         }
       },
