--- a/КиноОнлайн/prepros.cfg
+++ b/КиноОнлайн/prepros.cfg
@@ -190,8 +190,7 @@
           "customOutput": false,
           "imported": true,
           "parents": [
-            "c926a60c",
-            "717bccb9"
+            "c926a60c"
           ],
           "type": "sass"
         },
@@ -424,13 +423,11 @@
           "output": "dev/html/video/like.html",
           "name": "like.jade",
           "category": "HTML",
-          "autoCompile": false,
+          "autoCompile": true,
           "pretty": true,
           "customOutput": false,
-          "imported": true,
-          "parents": [
-            "d9284651"
-          ],
+          "imported": false,
+          "parents": [],
           "type": "jade"
         },
         "cd8c0e26": {
@@ -516,13 +513,11 @@
           "output": "dev/html/video/recommendedToYou.html",
           "name": "recommendedToYou.jade",
           "category": "HTML",
-          "autoCompile": false,
+          "autoCompile": true,
           "pretty": true,
           "customOutput": false,
-          "imported": true,
-          "parents": [
-            "d9284651"
-          ],
+          "imported": false,
+          "parents": [],
           "type": "jade"
         },
         "4a7cb542": {
@@ -572,7 +567,8 @@
           "customOutput": false,
           "imported": true,
           "parents": [
-            "c926a60c"
+            "c926a60c",
+            "717bccb9"
           ],
           "type": "sass"
         },
@@ -587,7 +583,8 @@
           "customOutput": false,
           "imported": true,
           "parents": [
-            "a11c4966"
+            "a11c4966",
+            "d9284651"
           ],
           "type": "jade"
         },
